# artificial-neural-network

./: .gitignore  ArtificialNeuralNetwork.cpp  ArtificialNeuralNetwork.h  CMakeLists.txt  Connection.cpp  Connection.h  Layer.cpp  Layer.h  Main.cpp  Neuron.cpp  Neuron.h  README.md  TrainingSet.cpp  TrainingSet.h  train.csv
ANN/: ArtificialNeuralNetwork.h  CMakeLists.txt  Neuron.h
